<resources>
    <string name="app_name">Scanner 2</string>

    <string name="discover_new_devices">Discover new devices</string>
    <string name="show_paired_devices">Show paired devices</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooh_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="status">Status</string>

    <string name="close">Close</string>
    <string name="keyless_entry_system">Keyless entry system</string>
    <string name="Connect">Connect</string>
    <string name="title_search">Search</string>
    <string name="BTNDisconnect">Disconnect</string>
    <string name="BTNConnect">Connect</string>
    <string name="TambahCustomer">Tambah Customer</string>
    <string name="TambahMerek">Tambah Merek</string>
    <string name="TambahTipeKendaraan">Tambah Tipe Kendaraan</string>
    <string name="TambahSatuan">Tambah Satuan</string>
    <string name="Edit">Edit</string>
    <string name="EditCustomer">Edit Customer</string>
    <string name="EditMerek">Edit Merek</string>
    <string name="EditTipeKendaraan">Edit Tipe Kendaraan</string>
    <string name="EditSatuan">Edit Satuan</string>
    <string name="EditBarang">Edit Barang</string>
    <string name="kode">Kode</string>
    <string name="nama">Nama</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_barang">Tambah barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="merek">Merek</string>
    <string name="pilih">Pilih</string>
    <string name="tipe_kendaraan">Tipe Kendaraan</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="satuan">Satuan</string>
    <string name="jumlah_unit_per_item">Jumlah Unit Per Item</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="restart_camera">Restart Camera</string>
    <string name="detail">Detail</string>
    <string name="transaksi">Transaksi</string>
    <string name="tanggal">Tanggal</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="retur">Retur</string>
    <string name="rusak">Rusak</string>
    <string name="hapus">Hapus</string>
    <string name="penyesuaian">Penyesuaian</string>
    <string name="paired_device">Paired Device</string>
    <string name="no_bluetooth_devices_paired">No Bluetooth Devices Paired</string>
    <string name="add">Add</string>
    <string name="add_customer">Add Customer</string>
    <string name="wifi_status">Wifi Status</string>
    <string name="server_status">Server Status</string>
    <string name="none">-</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="device">Device : -</string>
    <string name="battery_level">Battery Level: 0%</string>
    <string name="masukan_password">Masukan password</string>
    <string name="tampilkan_ok">Tampilkan OK</string>
    <string name="detail_barang">Detail Barang</string>
    <string name="name">Nama :</string>
    <string name="barang_0">Barang (0)</string>
    <string name="error_0">Error (0)</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="ulang">Ulang</string>
    <string name="hapus_tag_hilang">Hapus Tag (Hilang)</string>
    <string name="barang_lama">Barang Lama</string>
    <string name="pilih_kode">Pilih Kode</string>
    <string name="list_tag">List Tag</string>
    <string name="_0_tag">0 tag</string>
    <string name="kode_faktur">Kode Faktur</string>
    <string name="code">Kode :</string>
    <string name="tag_mirip_sama_0">Tag Mirip / Sama (0)</string>
    <string name="tag_lain_0">Tag Lain (0)</string>
</resources>